# Student_Management_GUI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py  test_ui.py
docs/: API.md  ARCHITECTURE.md  SETUP.md
src/: __init__.py  main.py
src/config/: __init__.py  settings.py  ui_config.py
src/database/: __init__.py  db_manager.py  models.py  queries.py
src/services/: __init__.py  auth_service.py  marks_service.py  student_service.py
src/ui/: __init__.py  admin_panel.py  base.py  components.py  login_window.py  marks_view.py  registration_window.py  student_view.py  themes.py  user_registration_window.py
src/utils/: __init__.py  file_handler.py  helpers.py  image_handler.py
src/validators/: __init__.py  business_rules.py  form_validator.py
tests/: __init__.py  test_database.py  test_integration.py  test_services.py  test_ui_registration.py  test_utils.py  test_validators.py
