[project]
name = "student-management-gui"
version = "1.0.0"
description = "Student Management System - Developed by Subhranil Sarkar"
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "pillow",
    "tkcalendar",
    "babel",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
    "pylint>=2.17.0",
    "black>=23.9.0",
]
build = [
    "cx-freeze",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
